aula 18 de maio

--- a/aula -18-maio-2024/index .html
+++ b/aula -18-maio-2024/index .html
@@ -9,7 +9,7 @@
     <h3>HTML</h3>
     <h5> O QUE E HTML </h5>>
     <ol>
-        <li> <b> Define texto em negrito sem importância extra.
+        <li> <b> Define texto em negrito sem importância extra.</b>
            
            <li> i Define texto em itálico sem ênfase.
            <li> em Define texto em itálico com ênfase.
@@ -34,7 +34,7 @@
     <h5>imagem</h5>
     <p>imagem </p>
     <img src="./IMAG/IMAGEM.jpg" alt="cidade">
-    
+
 
 </body>
 </html>
