--- a/aula 25maio/form.html
+++ b/aula 25maio/form.html
@@ -1,40 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>formulario</title>
-  </head>
-  <body>
-    <div style="background-color: #f5f7fa; width:250px">
-    <section>
-      <article>
-        <p>
-          formulario de pesquisa academica sobre o trabalho na area
-          desenvolvimento do software na era chat gpt
-        </p>
-      </article>
-      <form>
-        <div>
-          <textarea></textarea>
-        </div>
-        <input type="text" />
-        <input type="number" />
-        <input type="password" />
-        <input type="date" />
-        <textarea></textarea>
-        <select required>
-          <option value="fortaleza">Fortaleza</option>
-          <option value="sao paulo">sao paulo</option>
-          <option value="marilia">marilia</option>
-          <option value="quixada">quixada</option>
-        </select>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <title>cadastro</title>
+</head>
+<body>
 
-        <div>
-          <input type="submit" value="enviar" />
+  <div>
+    <h1 id="titulo">cadatro de devs</h1>
+    <p id="subtitulo">Complete suas informaçoes</p>
+    <br>
+  </div>
+
+  <form>
+    <fieldset class="grupo">
+      <div>
+        <labelfor="nome"><strong>Nome</strong></label>
+        <input type="text" nome="nome" id="nome" required>
+      </div>
+
+      <div>
+        <label for="sobrenome"><strong>sobrenome</strong></label>
+        <input type="text" nome="sobrenome" id="sobrenome" required>
         </div>
-      </form>
-    </section>
+    </fieldset 
+
+    <div class="campo">
+      <label for="email"><strong>Email</strong></label>
+      <input type="email" name="email" id="email" required>
     </div>
-  </body>
+
+    <div>
+      <label> De qual lado da apliacaçao você desenvolver? </label>
+      <labe>
+        <input type="radio" name="devweb" value="frontend">front-end
+      </labe>
+      <label>
+        <input type="radio" name="devweb" value="backend">backend
+      </label>
+      <label>
+        <input type="radio" nome="devweb" value="fullstack">fullstack
+      </label>
+     </div>
+     <div>
+      <label>Senioridade</label>
+      <select id="senioridade">
+        <option select disabled value="">selecione</option>
+      <option>junior</option>
+      <option>pleno</option>
+      <option>Senior</option>
+    </select>
+     </div>
+     <fieldset class="grupo"
+      <div>
+        <label>Selecione as tecnologias que utiliza:</label><br><br>
+        <input type="ckeckbox" id="tecnologia1"  name="tecnologia1" value="html"
+        <label for="tecnologia1">html</label>
+        <input type="ckeckbox" id="tecnologia2" name="tecnologia2" value="css">
+        <label for="tecnologia2">css</label>
+        <input type="ckeckbox" id="tecnologia3" name="tecnologia3" value="javasscript"
+        <label for="tecnologia3">javasscript</label>
+
+      </div>
+     </fieldset>
+     <div>
+      <br>
+      <labe>Conte um pouco da sua EXPERIÊNCIA :</labe> 
+      <textarea row="6" style="width: 26em;" id="EXPERIÊNCIA" name="EXPERIÊNCIA"></textarea>
+     </div>
+
+     <button type="submit">concluido</button>
+
+  </form>
+  
+</body>
 </html>
